fix overflow canvas on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ a:hover {
         width: 100%;
         display: block;
         height: 100vh;
+        overflow: hidden;
     }
     
     .right-side {
